[package]
name = "versa_core"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic = "0.6.0"
dashmap = "6.0.1"
env_logger = "0.11.3"
lazy_static = "1.5.0"
libloading = "0.8.4"
log = "0.4.22"
tokio = { version = "1.38.1", features = ["fs", "full"], optional = true } 

[features]
async = ["tokio"]
